Add lock files and ics file

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ themes/*
 !themes/.*
 !themes/feuerwehr-hungen/
 accounts/*
-!accounts/.*
+#!accounts/.*
 !pages/.*
 
 # OS Generated
@@ -22,3 +22,5 @@ Thumbs.db
 
 # phpstorm
 .idea/*
+/themes/feuerwehr-hungen/node_modules/
+/themes/feuerwehr-hungen/scss/.sass-cache
