Erste Versuche mit Flexobjects, Einrichtung, Test

--- a/data/flex/indexes/accounts.yaml
+++ b/data/flex/indexes/accounts.yaml
@@ -1,5 +1,5 @@
 version: '1.2'
-timestamp: 1713292869
+timestamp: 1713309545
 count: 2
 index:
   bastianhaaf:
@@ -9,6 +9,6 @@ index:
     email: bastian@haaf.ch
   jan:
     storage_key: jan
-    storage_timestamp: 1713292869
+    storage_timestamp: 1713309533
     key: jan
-    email: jan@martens.de
+    email: jan.n.martens@web.de
