Sortierung der Flex-Objects im Admin-Gui auf Date umgestellt

--- a/data/flex-objects/einsatze.yaml
+++ b/data/flex-objects/einsatze.yaml
@@ -4,3 +4,15 @@
   date: '2024-04-18'
   time: '13:00'
   ort: Erlenweg
+3ed5bb43ef67435fe70ebdbced86123a:
+  published: true
+  titel: 'Noch einer'
+  date: '2024-04-10'
+  time: '02:32'
+  ort: '123123'
+ecdd6bb58f54c0b53fc2a93568d9c6ad:
+  published: true
+  titel: 'Noch einer'
+  date: '2023-12-02'
+  time: '12:11'
+  ort: asdfsdaf
