Added two News items with pictures

--- a/data/flex-objects/einsatze.yaml
+++ b/data/flex-objects/einsatze.yaml
@@ -16,3 +16,15 @@ ecdd6bb58f54c0b53fc2a93568d9c6ad:
   date: '2023-12-02'
   time: '12:11'
   ort: asdfsdaf
+123123123123:
+  publlished: true
+  titel: 'Einsatzbereicht II'
+  date: '2023-02-02'
+  time: '12:12'
+  ort: 'Irgendwo im Nirgendwo'
+12312312312:
+  publlished: true
+  titel: 'Einsatzbereicht I'
+  date: '2022-02-02'
+  time: '12:12'
+  ort: 'Irgendwo im Nirgendwo'
