--- a/plugins/flex-objects/flex-objects.yaml
+++ b/plugins/flex-objects/flex-objects.yaml
@@ -12,3 +12,4 @@ directories:
   - 'blueprints://flex-objects/pages.yaml'
   - 'blueprints://flex-objects/user-accounts.yaml'
   - 'blueprints://flex-objects/user-groups.yaml'
+  - 'blueprints://flex-objects/einsaetze.yaml'
