Fixing spelling mistakes

--- a/plugins/flex-objects/blueprints/flex-objects/einsaetze.yaml
+++ b/plugins/flex-objects/blueprints/flex-objects/einsaetze.yaml
@@ -29,7 +29,7 @@ config:
       # Primary permissions
       admin.contacts:
         type: crudpl
-        label: Eomsatue
+        label: Einsatzberichte 
 
     # List view
     list:
