Added Flex-Objects for Describe People of the Firedepartment and added an owl slider on the Page Einsatzabteilung

--- a/config/plugins/flex-objects.yaml
+++ b/config/plugins/flex-objects.yaml
@@ -11,3 +11,4 @@ directories:
   2: 'blueprints://flex-objects/pages.yaml'
   3: 'blueprints://flex-objects/user-accounts.yaml'
   4: 'blueprints://flex-objects/user-groups.yaml'
+  5: 'blueprints://flex-objects/vorstellung.yaml'
