Update team page to include modal functionality and update flex object for team members

--- a/data/flex-objects/vorstellung.yaml
+++ b/data/flex-objects/vorstellung.yaml
@@ -11,6 +11,9 @@ aecc46abb3ee1883310b98e66808c6d7:
       type: image/jpeg
       size: 588455
       path: 'image://vorstellung-images/001_20240402_194702_DSC09810.jpg'
+  beruf: IT-Security-Spezialist
+  ausbildung: 'Ausbildung als Vermessungstechniker, anschließend Maschinenbaustudium'
+  datum: 2001
 cafd2d40bd22580562b9dbf6907a609d:
   published: true
   picked_image: 001_20240402_193954_DSC09796.jpg
@@ -22,7 +25,11 @@ cafd2d40bd22580562b9dbf6907a609d:
       name: 001_20240402_193954_DSC09796.jpg
       type: image/jpeg
       size: 594593
-      path: 'image://vorstellung-images//001_20240402_193954_DSC09796.jpg'
+      path: 'image://vorstellung-images/001_20240402_193954_DSC09796.jpg'
+  beruf: Student
+  datum: 2008
+  beschreibung: 'Mein Onkel war Wehrführer und damit war für mich klar: "Da muss ich hin...". Später kam noch die Motivation dazu, etwas Gutes zu tun und sich für die Menschen einzusetzen.'
+  ausbildung: 'Bachelor of Science Informatics'
 7042789a3fa82300ad8010c21c553df6:
   published: true
   picked_image: 001_20240402_194934_DSC09838.jpg
