--- a/config/system.yaml
+++ b/config/system.yaml
@@ -28,7 +28,7 @@ languages:
   pages_fallback_only: false
   debug: false
 home:
-  alias: /blog
+  alias: /home
   hide_in_urls: false
 pages:
   type: regular
