--- a/themes/feuerwehr-hungen/package.json
+++ b/themes/feuerwehr-hungen/package.json
@@ -28,8 +28,8 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-csscomb": "^3.0.8",
-    "gulp-rename": "^1.2.2",
-    "gulp-dart-sass": "^1.1.0"
+    "gulp-dart-sass": "^1.1.0",
+    "gulp-rename": "^1.2.2"
   },
   "browserslist": [
     "last 4 Chrome versions",
@@ -44,6 +44,7 @@
     "build": "gulp build"
   },
   "dependencies": {
+    "glightbox": "^3.3.0",
     "gulp-sourcemaps": "^2.6.4"
   }
 }
