Add bastian changes

--- a/config/system.yaml
+++ b/config/system.yaml
@@ -1,5 +1,6 @@
 absolute_urls: false
 timezone: null
+default_locale: null
 param_sep: ':'
 wrapped_site: false
 reverse_proxy_setup: true
@@ -25,6 +26,7 @@ languages:
   session_store_active: false
   http_accept_language: false
   override_locale: true
+  content_fallback: {  }
   pages_fallback_only: false
   debug: false
 home:
@@ -206,7 +208,7 @@ session:
   domain: null
   path: null
 gpm:
-  releases: stable
+  releases: testing
   official_gpm_only: true
 http:
   method: auto
