--- a/config/plugins/flex-objects.yaml
+++ b/config/plugins/flex-objects.yaml
@@ -9,6 +9,7 @@ admin_list:
 directories:
   1: 'blueprints://flex-objects/einsaetze.yaml'
   2: 'blueprints://flex-objects/pages.yaml'
-  3: 'blueprints://flex-objects/user-accounts.yaml'
-  4: 'blueprints://flex-objects/user-groups.yaml'
-  5: 'blueprints://flex-objects/vorstellung.yaml'
+  3: 'blueprints://flex-objects/technic.yaml'
+  4: 'blueprints://flex-objects/user-accounts.yaml'
+  5: 'blueprints://flex-objects/user-groups.yaml'
+  6: 'blueprints://flex-objects/vorstellung.yaml'
